[gd_scene load_steps=51 format=2]

[ext_resource path="res://Assets/Menu/MenuClick.wav" type="AudioStream" id=1]
[ext_resource path="res://Src/AudioPlayer/AudioPlayer.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/jump_down.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/jump_up.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/guard_alarm 2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/guard_alarm 3.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/SFX/guard_alarm 1.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/guard_alarm 4.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/guard_suspicious 2.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/guard_suspicious 1.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/guard_suspicious 3.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/guard_suspicious 4.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/SFX/taser_deploy.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/SFX/taser_hit.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/SFX/minigame_fail2.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/SFX/camera_alarm.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/SFX/camera_beep.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/SFX/wirecut.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/SFX/keypad_clear.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/SFX/keypad_input.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/SFX/input_correct.wav" type="AudioStream" id=21]
[ext_resource path="res://Assets/SFX/input_wrong.wav" type="AudioStream" id=22]
[ext_resource path="res://Assets/SFX/menu_click.wav" type="AudioStream" id=23]
[ext_resource path="res://Assets/SFX/door_wood_open.wav" type="AudioStream" id=24]
[ext_resource path="res://Assets/SFX/door_wood_close.wav" type="AudioStream" id=25]
[ext_resource path="res://Assets/SFX/door_metal_open2.wav" type="AudioStream" id=26]
[ext_resource path="res://Assets/SFX/door_metal_close2.wav" type="AudioStream" id=27]
[ext_resource path="res://Assets/SFX/lockpick_hit.wav" type="AudioStream" id=28]
[ext_resource path="res://Assets/SFX/lockpick_miss.wav" type="AudioStream" id=29]
[ext_resource path="res://Assets/SFX/car_close.wav" type="AudioStream" id=30]
[ext_resource path="res://Assets/SFX/car_open.wav" type="AudioStream" id=31]
[ext_resource path="res://Assets/SFX/minigame_victory.wav" type="AudioStream" id=32]
[ext_resource path="res://Assets/SFX/paper.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/SFX/type2.wav" type="AudioStream" id=34]
[ext_resource path="res://Assets/SFX/stone1.wav" type="AudioStream" id=35]
[ext_resource path="res://Assets/SFX/stone3.wav" type="AudioStream" id=36]
[ext_resource path="res://Assets/SFX/stone4.wav" type="AudioStream" id=37]
[ext_resource path="res://Assets/SFX/stone2.wav" type="AudioStream" id=38]
[ext_resource path="res://Assets/SFX/crouch_walk 4.wav" type="AudioStream" id=39]
[ext_resource path="res://Assets/SFX/crouch_walk 2.wav" type="AudioStream" id=40]
[ext_resource path="res://Assets/SFX/crouch_walk 1.wav" type="AudioStream" id=41]
[ext_resource path="res://Assets/SFX/crouch_walk 3.wav" type="AudioStream" id=42]
[ext_resource path="res://Assets/SFX/laser_detect.wav" type="AudioStream" id=43]
[ext_resource path="res://Assets/Music/western_world.ogg" type="AudioStream" id=44]
[ext_resource path="res://Assets/SFX/chest_bounty.wav" type="AudioStream" id=45]
[ext_resource path="res://Assets/SFX/chest_locked.wav" type="AudioStream" id=46]
[ext_resource path="res://Assets/SFX/eastern_bloc.ogg" type="AudioStream" id=47]
[ext_resource path="res://Assets/SFX/hq.ogg" type="AudioStream" id=48]
[ext_resource path="res://Assets/SFX/title.ogg" type="AudioStream" id=49]
[ext_resource path="res://Assets/SFX/chair_startle.wav" type="AudioStream" id=50]

[node name="AudioPlayer" type="Node2D"]
script = ExtResource( 2 )
guardAlarmSounds = [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ) ]
guardSuspiciousSounds = [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ) ]
playerFootstepSounds = [ ExtResource( 35 ), ExtResource( 38 ), ExtResource( 36 ), ExtResource( 37 ) ]
playerCrouchWalkSounds = [ ExtResource( 41 ), ExtResource( 40 ), ExtResource( 42 ), ExtResource( 39 ) ]
westernMusic = ExtResource( 44 )
easternMusic = ExtResource( 47 )
hqMusic = ExtResource( 48 )
menuMusic = ExtResource( 49 )

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -16.0
pitch_scale = 0.6
bus = "Sound"

[node name="Example2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -16.0
pitch_scale = 0.6
bus = "Sound"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -16.0
bus = "Music"

[node name="PlayerSounds" type="Node2D" parent="."]

[node name="JumpDown" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = ExtResource( 3 )

[node name="JumpUp" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = ExtResource( 4 )

[node name="TaserDeploy" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = ExtResource( 13 )

[node name="TaserHit" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = ExtResource( 14 )

[node name="Footstep" type="AudioStreamPlayer2D" parent="PlayerSounds"]
volume_db = -5.0

[node name="CrouchWalk" type="AudioStreamPlayer2D" parent="PlayerSounds"]

[node name="RandomSound" type="AudioStreamPlayer2D" parent="."]

[node name="MinigameSounds" type="Node2D" parent="."]

[node name="MinigameFail" type="AudioStreamPlayer2D" parent="MinigameSounds"]
stream = ExtResource( 15 )

[node name="WireCut" type="AudioStreamPlayer2D" parent="MinigameSounds"]
stream = ExtResource( 18 )

[node name="Keypad" type="Node2D" parent="MinigameSounds"]

[node name="KeypadClear" type="AudioStreamPlayer2D" parent="MinigameSounds/Keypad"]
stream = ExtResource( 19 )

[node name="KeypadInput" type="AudioStreamPlayer2D" parent="MinigameSounds/Keypad"]
stream = ExtResource( 20 )

[node name="KeypadInputCorrect" type="AudioStreamPlayer2D" parent="MinigameSounds/Keypad"]
stream = ExtResource( 21 )

[node name="KeypadInputWrong" type="AudioStreamPlayer2D" parent="MinigameSounds/Keypad"]
stream = ExtResource( 22 )

[node name="Lockpick" type="Node2D" parent="MinigameSounds"]

[node name="Hit" type="AudioStreamPlayer2D" parent="MinigameSounds/Lockpick"]
stream = ExtResource( 28 )

[node name="Miss" type="AudioStreamPlayer2D" parent="MinigameSounds/Lockpick"]
stream = ExtResource( 29 )

[node name="MinigameSuccess" type="AudioStreamPlayer2D" parent="MinigameSounds"]
stream = ExtResource( 32 )

[node name="CameraSounds" type="Node2D" parent="."]

[node name="Alarm" type="AudioStreamPlayer2D" parent="CameraSounds"]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="Beep" type="AudioStreamPlayer2D" parent="CameraSounds"]
stream = ExtResource( 17 )

[node name="DoorSounds" type="Node2D" parent="."]

[node name="WoodenOpen" type="AudioStreamPlayer" parent="DoorSounds"]
stream = ExtResource( 24 )

[node name="WoodenClose" type="AudioStreamPlayer" parent="DoorSounds"]
stream = ExtResource( 25 )

[node name="MetalOpen" type="AudioStreamPlayer" parent="DoorSounds"]
stream = ExtResource( 26 )

[node name="MetalClose" type="AudioStreamPlayer" parent="DoorSounds"]
stream = ExtResource( 27 )

[node name="ObjectSounds" type="Node2D" parent="."]

[node name="CarOpen" type="AudioStreamPlayer2D" parent="ObjectSounds"]
stream = ExtResource( 31 )

[node name="CarClose" type="AudioStreamPlayer2D" parent="ObjectSounds"]
stream = ExtResource( 30 )

[node name="NoteOpen" type="AudioStreamPlayer2D" parent="ObjectSounds"]
stream = ExtResource( 33 )

[node name="LaserDetect" type="AudioStreamPlayer2D" parent="ObjectSounds"]
stream = ExtResource( 43 )
volume_db = -5.0

[node name="Type" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 34 )
volume_db = -10.0

[node name="Guard" type="Node2D" parent="."]

[node name="Alarm" type="AudioStreamPlayer2D" parent="Guard"]

[node name="Suspicious" type="AudioStreamPlayer2D" parent="Guard"]

[node name="DeskGuardDetect" type="AudioStreamPlayer2D" parent="Guard"]
position = Vector2( 0, 1 )
stream = ExtResource( 50 )

[node name="ChestSounds" type="Node2D" parent="."]

[node name="Locked" type="AudioStreamPlayer2D" parent="ChestSounds"]
stream = ExtResource( 46 )

[node name="HasBounty" type="AudioStreamPlayer2D" parent="ChestSounds"]
stream = ExtResource( 45 )
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
